--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -34,3 +34,14 @@ spring:
   resources:
     staticLocations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/templates/
 
+  mail:
+      host: smtp.163.com
+      username: jpastore@163.com
+      password: sqddtwdh
+      properties:
+        mail:
+          smtp:
+            auth: true
+            timeout: 25000
+
+
